# qml-gstreamer

./: CMakeLists.txt  README.md  readme
elements/: CMakeLists.txt
elements/gstqtvideosink/: CMakeLists.txt  gstqtvideosinkmarshal.c  gstqtvideosinkmarshal.h
